--- a/main.html
+++ b/main.html
@@ -17,10 +17,10 @@
 		<button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
 	</div>
 	<div>
-		<button id="button-5" class="btn btn-warning col-12">Button-5</button>
+		<button id="button-5" class="btn btn-warning btn-lg vw-100">Button-5</button>
 	</div>
 	<div>
-		<button id="button-6" class="btn btn-info disable">Button-6</button>
+		<button id="button-6" class="btn btn-info disabled">Button-6</button>
 		<button id="button-7" class="btn btn-light">Button-7</button>
 		<button id="button-8" class="btn btn-link">Button-8</button>
 	</div>
